added connection indicator

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,11 +21,24 @@ body {
   overflow: hidden;
 
   .list {
+    position: relative;
+
     h1 {
       margin: 0;
       text-align: center;
       padding: 10px;
       color: rgba(0, 0, 0, 0.2);
+    }
+
+    .disconnected {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      text-align: center;
+      font-weight: 600;
+      padding: 10px;
+      background: rgba(255, 255, 255, 0.4);
     }
 
     table {
