--- a/src/App.scss
+++ b/src/App.scss
@@ -87,5 +87,46 @@ body {
     max-height: 100vh;
     overflow-y: scroll;
     overflow-x: auto;
+
+    & > h2 {
+      font-weight: 600;
+      padding: 20px;
+      margin: 0;
+    }
+
+    & > .metadata {
+      display: grid;
+      grid-template-columns: 40px 1fr 1fr;
+      padding: 20px;
+      padding-top: 0;
+      grid-gap: 10px;
+
+      .avatar {
+        height: 40px;
+        width: 40px;
+        text-transform: uppercase;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: #333;
+        color: #fff;
+        font-weight: bold;
+        font-size: 20px;
+        margin-top: 3px;
+        padding-bottom: 3px;
+        border-radius: 40px;
+      }
+
+      .date {
+        text-align: right;
+      }
+
+      .address {
+        .to {
+          margin-top: -2px;
+          font-size: 14px;
+        }
+      }
+    }
   }
 }
