--- a/src/App.scss
+++ b/src/App.scss
@@ -30,7 +30,7 @@ body {
       color: rgba(0, 0, 0, 0.2);
     }
 
-    .disconnected {
+    .status {
       position: absolute;
       top: 0;
       left: 0;
