--- a/src/App.scss
+++ b/src/App.scss
@@ -11,13 +11,13 @@ body {
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background: #f1f1f1;
+  background: #fff;
 }
 
 .app {
   max-height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 3fr;
   overflow: hidden;
   position: absolute;
   top: 0;
@@ -27,6 +27,7 @@ body {
 
   .list {
     position: relative;
+    border-right: 2px solid #ccc;
 
     h1 {
       margin: 0;
@@ -77,44 +78,41 @@ body {
       }
     }
 
-    table {
-      width: 100%;
+    ul {
+      list-style-type: none;
+      padding: 0;
 
-      td,
-      th {
-        padding: 5px;
-      }
-
-      th {
-        background: #222;
-        color: #fff;
-        font-weight: 600;
-      }
-
-      tr {
+      li {
+        padding: 5px 20px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        border-bottom: 1px solid #ccc;
         cursor: pointer;
-        font-weight: 600;
 
-        &.read {
-          font-weight: normal;
-          color: #333;
+        &.selected {
+          background: #eee;
         }
-      }
 
-      tr:nth-child(2n) td {
-        background: #eee;
-      }
+        .from {
+          font-weight: bold;
+          grid-column: 1 / 2;
+        }
 
-      tr:nth-child(2n + 1) td {
-        background: #ddd;
-      }
+        .date {
+          grid-column: 2 / 3;
+          text-align: right;
+          color: #777;
+        }
 
-      tr:hover td {
-        background: #f1f1f1;
-      }
+        .subject,
+        .text {
+          grid-column: 1 / 3;
+        }
 
-      tr.selected td {
-        background: #ccc;
+        .from,
+        .subject {
+          display: block;
+        }
       }
     }
   }
