--- a/src/App.scss
+++ b/src/App.scss
@@ -12,12 +12,10 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background: #fff;
+  height: 100vh;
 }
 
 .app {
-  max-height: 100vh;
-  display: grid;
-  grid-template-columns: 1fr 3fr;
   overflow: hidden;
   position: absolute;
   top: 0;
@@ -25,9 +23,15 @@ body {
   right: 0;
   bottom: 0;
 
+  &.preview-visible {
+    .list {
+      display: none;
+    }
+  }
+
   .list {
     position: relative;
-    border-right: 2px solid #ccc;
+    height: 100%;
 
     h1 {
       margin: 0;
@@ -119,8 +123,6 @@ body {
 
   .preview {
     max-height: 100vh;
-    overflow-y: scroll;
-    overflow-x: auto;
 
     & > pre {
       padding: 20px;
@@ -128,10 +130,29 @@ body {
       word-wrap: break-word;
     }
 
-    & > h2 {
-      font-weight: 600;
+    & > .title {
       padding: 20px;
-      margin: 0;
+      display: flex;
+      justify-items: center;
+
+      .mobile-back {
+        padding: 0;
+        padding-right: 5px;
+        display: flex;
+        align-items: center;
+        background: none;
+        border: none;
+        font-size: 26px;
+        margin-top: 2px;
+        color: #555;
+        cursor: pointer;
+      }
+
+      h2 {
+        display: inline-block;
+        font-weight: 600;
+        margin: 0;
+      }
     }
 
     & > .metadata {
@@ -170,6 +191,35 @@ body {
           border: none;
           cursor: pointer;
           padding: 0;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .app {
+    max-height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+
+    .list {
+      border-right: 2px solid #ccc;
+    }
+
+    &.preview-visible {
+      .list {
+        display: block;
+      }
+    }
+
+    .preview {
+      overflow-y: scroll;
+      overflow-x: auto;
+
+      & > .title {
+        .mobile-back {
+          display: none;
         }
       }
     }
