added an empty state

--- a/src/App.scss
+++ b/src/App.scss
@@ -51,6 +51,10 @@ body {
       background: rgba(255, 255, 255, 0.4);
     }
 
+    .empty {
+      text-align: center;
+    }
+
     .authentication {
       position: absolute;
       top: 0;
