--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,8 @@ body {
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background: #fff;
+  background: #f1f1f1;
+  color: black;
   height: 100vh;
 }
 
@@ -32,6 +33,7 @@ body {
   .list {
     position: relative;
     height: 100%;
+    background: #fff;
 
     h1 {
       margin: 0;
@@ -98,7 +100,7 @@ body {
         cursor: pointer;
 
         &.selected {
-          background: #eee;
+          background: #f1f1f1;
         }
 
         .from {
@@ -225,6 +227,45 @@ body {
         .mobile-back {
           display: none;
         }
+      }
+    }
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background: #111;
+    color: white;
+  }
+
+  button {
+    color: white;
+  }
+
+  .app {
+    .list {
+      background: #000;
+
+      h1 {
+        color: rgba(255, 255, 255, 0.2);
+      }
+
+      ul {
+        li {
+          border-bottom: 1px solid #333;
+
+          &.selected {
+            background: #111;
+          }
+        }
+      }
+    }
+  }
+
+  @media screen and (min-width: 1000px) {
+    .app {
+      .list {
+        border-right: 2px solid #333;
       }
     }
   }
