--- a/src/App.scss
+++ b/src/App.scss
@@ -115,8 +115,13 @@ body {
         }
 
         .subject,
-        .text {
+        .text,
+        .body {
           grid-column: 1 / 3;
+        }
+
+        .body {
+          color: #777;
         }
 
         .from,
