added react router

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,6 +30,49 @@ body {
     }
   }
 
+  & > .status {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    font-weight: 600;
+    padding: 10px;
+    background: rgba(255, 255, 255, 0.4);
+    z-index: 500;
+  }
+
+  & > .authentication {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 500;
+    color: white;
+    text-align: center;
+
+    & > * {
+      display: block;
+    }
+
+    input {
+      background: #f1f1f1;
+      border: none;
+      padding: 10px;
+      margin: 10px auto;
+    }
+
+    button {
+      background: #ddd;
+      border: none;
+      padding: 10px;
+      margin: 10px auto;
+      cursor: pointer;
+    }
+  }
+
   .list {
     position: relative;
     height: 100%;
@@ -42,50 +85,8 @@ body {
       color: rgba(0, 0, 0, 0.2);
     }
 
-    .status {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      text-align: center;
-      font-weight: 600;
-      padding: 10px;
-      background: rgba(255, 255, 255, 0.4);
-    }
-
     .empty {
       text-align: center;
-    }
-
-    .authentication {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: rgba(0, 0, 0, 0.8);
-      z-index: 500;
-      color: white;
-      text-align: center;
-
-      & > * {
-        display: block;
-      }
-
-      input {
-        background: #f1f1f1;
-        border: none;
-        padding: 10px;
-        margin: 10px auto;
-      }
-
-      button {
-        background: #ddd;
-        border: none;
-        padding: 10px;
-        margin: 10px auto;
-        cursor: pointer;
-      }
     }
 
     ul {
@@ -93,14 +94,18 @@ body {
       padding: 0;
 
       li {
-        padding: 5px 20px;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        border-bottom: 1px solid #ccc;
-        cursor: pointer;
+        & > a {
+          padding: 5px 20px;
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          border-bottom: 1px solid #ccc;
+          text-decoration: none;
+          color: currentColor;
+          outline: none;
 
-        &.selected {
-          background: #f1f1f1;
+          &.selected {
+            background: #f1f1f1;
+          }
         }
 
         .from {
@@ -257,10 +262,12 @@ body {
 
       ul {
         li {
-          border-bottom: 1px solid #333;
+          a {
+            border-bottom: 1px solid #333;
 
-          &.selected {
-            background: #111;
+            &.selected {
+              background: #111;
+            }
           }
         }
       }
